# gra_platformowa

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Ryba.cpp  Ryba.h  bloki.cpp  bloki.h  bum.cpp  bum.h  cmake_install.cmake  kot.cpp  kot.h  main.cpp  punkty.cpp  punkty.h
